--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calendar & DatePicker</title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="./calendar.js" type="module" defer></script>
   </head>
   <body>
     <h1>Date Picker</h1>
@@ -13,12 +14,12 @@
       <div class="calendar">
         <div class="calendar-container">
           <div class="calendar-nav">
-            <button class="prev"></button>
-            <div>
-              <span></span>
-              <span></span>
+            <button class="prev" type="button"></button>
+            <div class="nav-month-year">
+              <span class="nav-month">month</span>
+              <span class="nav-year">year</span>
             </div>
-            <button class="next"></button>
+            <button class="next" type="button"></button>
           </div>
           <div class="calendar-grid">
             <div class="day">Sun</div>
@@ -28,6 +29,7 @@
             <div class="day">Thu</div>
             <div class="day">Fri</div>
             <div class="day">Sat</div>
+            <div class="dates"></div>
           </div>
         </div>
       </div>
