--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
             <button class="next" type="button"></button>
           </div>
           <div class="calendar-grid">
-            <div class="day">Sun</div>
-            <div class="day">Mon</div>
-            <div class="day">Tue</div>
-            <div class="day">Wed</div>
-            <div class="day">Thu</div>
-            <div class="day">Fri</div>
-            <div class="day">Sat</div>
-            <div class="dates"></div>
+            <div class="days grid">
+              <div class="day">Sun</div>
+              <div class="day">Mon</div>
+              <div class="day">Tue</div>
+              <div class="day">Wed</div>
+              <div class="day">Thu</div>
+              <div class="day">Fri</div>
+              <div class="day">Sat</div>
+            </div>
+            <div class="dates grid"></div>
           </div>
         </div>
       </div>
